--- a/frontend/src/pages/sign_up/layout/style.scss
+++ b/frontend/src/pages/sign_up/layout/style.scss
@@ -1,11 +1,11 @@
 @import "~styles/variables.scss";
 
-.sign-up-page-container {
+.login-page-container {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.sign-up-page-content{
+.login-page-content{
 }
