--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,6 +1,6 @@
 
-$palette-1: #ffe4a2;
-$palette-2: #dca36e;
+$palette-1: #f6f4dd;
+$palette-2: #acd8dd;
 $palette-3: #c6522d;
 $palette-4: #4d2b19;
 
