--- a/frontend/src/components/round-calendar/style.scss
+++ b/frontend/src/components/round-calendar/style.scss
@@ -1,59 +1,86 @@
 $white: #ffffff;
 $transparent: transparent;
 
-$circle-width: 800px;
+$circle-width: 1000px;
 
 .round-calendar-container {
-  //border: 1px solid red;
-  width: 100%;
-  height: calc(100vh - 200px);
+  position: relative;
+  width: 100vw;
+  height: calc(100vh - 60px);
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: scroll;
+}
+
+
+.round-calendar-container-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 50px;
 }
 
 .round-calendar {
-color: #42423f;
+  color: #42423f;
   position: relative;
-  //border: 1px solid blue;
   border-radius: 50%;
-  width: $circle-width;
-  padding-bottom: $circle-width;
   height: 0;
-  //background: url("https://placehold.co/800x800") no-repeat center center;
 
-  &-gradient-bg {
+  &__gradient-bg {
     position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 50%;
   }
+}
 
-  &-line {
-    //border-left: 1px solid green;
-    position: absolute;
-    width: 18px;
-    height: $circle-width;
-    //transform: rotate(90deg);
+.round-calendar-month-letter-line {
+  position: absolute;
+  width: 18px;
+  top: 0;
+  left: calc(50% - 6px);
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  &__letter {
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: capitalize;
+    letter-spacing: 0;
+    left: 0;
     top: 0;
-    left: calc(50% - 6px);
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
 
-    &-month-letter {
-      display: block;
-      width: 6px;
-      font-size: 18px;
-      font-weight: 700;
-      text-transform: capitalize;
-      letter-spacing: 0;
-      left: 0;
-      top: 0;
+    &.reversed {
+      transform: rotate(180deg);
+    }
+  }
+}
 
-      &.reversed {
-        transform: rotate(180deg);
-      }
+.round-calendar-day-line {
+  position: absolute;
+  //width: 18px;
+  left: calc(50%);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+
+  &__letter {
+    display: block;
+    font-size: 6px;
+    font-weight: 700;
+    text-transform: capitalize;
+    letter-spacing: 0;
+    left: 0;
+    top: 0;
+
+    &.reversed {
+      transform: rotate(180deg);
+      //border-left: 1px solid red;
     }
   }
 }
